# ola-lang

./: .gitbook.yaml  .gitignore  .readthedocs.yaml  Cargo.toml  ContractDeployer_abi.json  DefaultAccount.ll  DefaultAccount_asm.json  Entrypoint.ll  Entrypoint_asm.json  Makefile  README.md  README_en.md  README_zh_CN.md  array.ll  array.s  array_1.ll  array_2.ll  array_2d.ll  array_3.ll  array_4.ll  array_5.ll  array_index.ll  array_sort.ll  array_struct.dot  array_struct.ll  books.ll  callee_asm.json  caller_asm.json  clippy.toml  compile.sh  fib.ll  input_1.ll  opt.ll  opt_1.ll  proposal_asm.json  rust-toolchain.toml  storage_address.dot  storage_address.ll  storage_array.ll  storage_array_copy.ll  (+18 more)
ola-parser/: Cargo.toml  build.rs
ola-parser/src/: diagnostics.rs  doccomment.rs  lexer.rs  lib.rs  ola.lalrpop  program.rs  pt.rs  test.rs
ola-parser/src/doc/: full.md  grammar.ebnf  grammar.md
ola-parser/src/testdata/syntaxTests/: bytecode_too_large.sol  bytecode_too_large_abiencoder_v1.sol  bytecode_too_large_byzantium.sol  bytecode_too_large_homestead.sol  constructor_this.sol  cycle_checker_function_type.sol  deprecated_functions.sol  double_variable_declaration.sol  literal_comparisons.sol  missing_functions_duplicate_bug.sol  missing_state_variable.sol  more_than_256_declarationerrors.sol  more_than_256_importerrors.sol  more_than_256_syntaxerrors.sol  negation.sol  signed_rational_modulus.sol  smoke_test.sol  tight_packing_literals.sol  tight_packing_literals_fine.sol  unexpected.sol  unimplemented_super_function.sol  unimplemented_super_function_derived.sol  upper_case_hex_literals.sol
ola-parser/testdata/semanticTests/accessor/: accessor1.ola  accessor2.ola
ola-parser/testdata/semanticTests/arithmetics/: addmod_mulmod.ola  addmod_mulmod_zero.ola  checked_add_v1.ola  divisiod_by_zero.ola  exp_associativity.ola
ola-parser/testdata/semanticTests/array/: array_operator.ola  arrays_complex_from_and_to_storage.ola  calldata_array.ola  calldata_array_as_argument_internal_function.ola  calldata_array_dynamic_invalid.ola  calldata_array_dynamic_invalid_static_middle.ola  calldata_array_dynamic_invalid_static_middle.sol  calldata_array_of_struct.ola  calldata_array_two_dimensional_1.ola  calldata_bytes_array_bounds.sol  calldata_slice_access.ola  constant_var_as_array_length.ola  external_array_args.ola  fixed_arrays_in_storage.ola  fixed_out_of_bounds_array_access.ola  inline_array_singleton.ola
ola-parser/testdata/semanticTests/cleanup/: bool_conversion_v1.ola  bool_conversion_v1.sol  bool_conversion_v2.ola  cleanup_in_compound_assign.ola  exp_cleanup_smaller_base.ola
ola-parser/testdata/semanticTests/constants/: constant_variables.ola  consteval_array_length.ola  simple_constant_variables_test.ola
ola-parser/testdata/semanticTests/demo/: vote.ola
ola-parser/testdata/semanticTests/enums/: enum_with_256_members.ola
ola-parser/testdata/semanticTests/events/: anonymous_event_four_indexed.ola  event_call.ola  invalid_parameter_mutability.ola
ola-parser/testdata/semanticTests/expressions/: conditional_expression_different_types.ola  conditional_expression_false_literal.ola  conditional_expression_multiple.ola  conditional_expression_true_literal.ola  conditional_expression_tuples.ola  conditional_expression_with_return_values.ola  conditional_expression_with_return_values.sol  exp_operator_const.ola  exp_zero_literal.ola  inc_dec_operators.ola
ola-parser/testdata/semanticTests/functionCall/: conditional_with_arguments.ola  disordered_named_args.ola  external_function.ola  external_function.sol  fib.ola  member_accessors.ola  mult_returns.ola  multiple_functions.ola  multiple_return_values.ola  named_args.ola  named_args_overload.ola  named_args_overload.sol  person.ola
ola-parser/testdata/semanticTests/integer/: many_local_variables.ola  many_local_variables.sol
ola-parser/testdata/semanticTests/libraries/: internal_call_attached_with_parentheses.ola  library_function_selectors.ola
ola-parser/testdata/semanticTests/literals/: ternary_operator_with_literal_types_overflow.ola
ola-parser/testdata/semanticTests/operators/: compound_assign.ola
ola-parser/testdata/semanticTests/scope/: c99_scoping_activation.ola
ola-parser/testdata/semanticTests/statements/: delete.ola  while.ola
ola-parser/testdata/semanticTests/structs/: lone_struct_array_type.ola  lone_struct_array_type.sol  memory_struct_named_constructor.ola  memory_struct_named_constructor.sol  memory_structs_as_function_args.ola  memory_structs_as_function_args.sol  memory_structs_nested.ola  memory_structs_nested.sol  memory_structs_nested_load.ola  memory_structs_nested_load.sol  memory_structs_read_write.ola  memory_structs_read_write.sol  nested_struct_allocation.ola  simple_struct_allocation.ola  struct_constructor_nested.ola  struct_constructor_nested.sol  struct_copy_via_local.ola  struct_copy_via_local.sol  struct_memory_to_storage.sol  struct_named_constructor.ola  struct_named_constructor.sol  struct_storage_push_zero_value.ola  struct_storage_push_zero_value.sol  struct_storage_to_memory.ola  struct_storage_to_memory.sol  struct_storage_to_memory_function_ptr.sol
ola-parser/testdata/semanticTests/types/: address_type.ola  assign_calldata_value_type.ola  assign_calldata_value_type.sol  mapping_type.ola  nested_tuples.ola  nested_tuples.sol  packing_unpacking_types.ola  u256_type.ola  (+1 more)
(+3885 files in other folders)
