[package]
name = "ola-lang"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", features = ["rand"]}
num-traits = "0.2"
num-integer = "0.1.44"
hex = "0.4"
itertools = "0.10"
ola-parser = { path = "./ola-parser" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = { version = "1.0" }
inkwell = { version = "0.1.0-beta.5", features = ["target-webassembly", "target-bpf", "no-libffi-linking", "llvm14-0"], optional = true }
once_cell = "1.10"
codespan-reporting = "0.11"
libc = { version = "0.2", optional = true }

indexmap = "1.8"
tiny-keccak = { version = "2.0", features = ["keccak"] }
key-node-list = "0.0.4"

[dev-dependencies]



[workspace]
members = ["ola-parser"]


[features]
default = ["llvm"]
llvm = ["inkwell", "libc"]