[package]
name = "ola-lang"
version = "0.1.1"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
authors = ["contact@sin7y.org"]
documentation = "https://olang.gitbook.io/ola-lang"
homepage = "https://github.com/Sin7Y/ola-lang"
description = "Ola Language Compiler"
keywords = [ "olac", "olavm", "ola", "olang", "compiler"]
exclude = ["/docs",  "/examples", "/bench"]

[[bin]]
name = "olac"
path = "src/bin/olac.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", features = ["rand"]}
num-traits = "0.2"
num-integer = "0.1.44"
hex = "0.4"
itertools = "0.10"
ola-parser = { path = "ola-parser", version = "1.0.0" }
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = { version = "1.0.193" }
inkwell = { version = "0.2.0", features = ["llvm15-0"] }
once_cell = "1.17"
codespan-reporting = "0.11"
clap = "4.4.7"
indexmap = "1.8"
tiny-keccak = { version = "2.0", features = ["keccak"] }
mini-goldilocks = { git = "https://github.com/Sin7Y/mini-goldilocks", branch = "main" }
key-node-list = "0.0.5"
nom = "^7.1.0"
rustc-hash = "^1.1.0"
id-arena = "^2.2.1"
anyhow = "^1.0.38"
log = "0.4.14"
thiserror = "1.0.30"
petgraph = "0.6.3"
debug_print = "1.0.0" 
scopeguard = "1.2.0"
[dev-dependencies]
color-backtrace = "0.5.1"
env_logger = "0.10.0"
insta = "^1.7.1"
structopt = "0.3.26"
rayon = "1"
assert_cmd = "2.0"

[workspace]
members = ["ola-parser"]


