[package]
name = "ola-parser"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.19.8", features = ["lexer"] }


[build-dependencies]
lalrpop = "0.19.8"
serde = { version = "1.0.150", features = ["derive"], optional = true }


[dev-dependencies]
walkdir = "2.3.2"
pretty_assertions = "1.2"
regex = "1.7.0"


[features]
program-serde = ["serde"]