[package]
name = "ola-parser"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
build = "build.rs"
description = "Ola Language Parser"
documentation = "https://olang.gitbook.io/ola-lang/"
homepage = "https://github.com/Sin7Y/ola-lang"
keywords = [ "olac", "olavm", "parser", "ola", "olang" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.19.12", features = ["lexer"] }
serde = { version = "1.0.150", features = ["derive"]}

[build-dependencies]
lalrpop = "0.19.12"

[dev-dependencies]
walkdir = "2.3.2"
pretty_assertions = "1.2"
regex = "1.7.0"
